<resources>
    <string name="app_name">WWU Mobile</string>
    <string-array name="menu_items_array">
        <item>Welcome (X)</item>
        <item>Campus Map (X)</item>
        <item>Library (X)</item>
        <item>About (X)</item>
        <item>Athletics (X)</item>
        <item>Student Administration</item>
        <item>News</item>
        <item>Events</item>
        <item>Directory</item>
        <item>Dining</item>
        <item>Settings</item>
        <item>Admissions</item>
        <item>Public Transport</item>
        <item>Social</item>
        <item>Emergency Info</item>
        <item>Campus Tour</item>
    </string-array>
    <string name="list_item_selected">&#160;Selected</string>
    <string name="target_contact_email_address_athletics">mariuspilgrim@icloud.com</string>
    <string name="target_contact_email_address_app_maintenance">mariuspilgrim@icloud.com</string>
    <string name="ok">OK</string>
    <string name="test_is_online_url">ping -c 1 www.google.com</string>
    <string name="expandable_list_group_position_expanded">&#160;Expanded</string>
    <string name="expandable_list_group_position_collapsed">&#160;Collapsed</string>
    <string name="main_menu_search_google_url_q">https://www.google.de/#q=</string>
    <string name="android_settings_path">com.android.settings</string>
    <string name="android_settings_language_path">com.android.settings.LanguageSettings</string>
    <string name="athletics_course_offer">http://muenster.hochschulsport-nrw.de/angebote/aktueller_zeitraum/m.html</string>
    <string name="athletics_web_site">https://www.uni-muenster.de/Hochschulsport/en/</string>
    <string name="library_opening_hours_url">http://www.ulb.uni-muenster.de/bibliothek/standorte/alphabet.html</string>
    <string name="library_catalog_url">http://katalogix.uni-muenster.de/Katalog/start.do</string>
    <string name="library_web_site_url">https://www.ulb.uni-muenster.de/</string>
    <string name="library_contact_url">https://www.ulb.uni-muenster.de/bibliothek/ansprechpartner/</string>
    <string name="library_login_url">https://katalogix.uni-muenster.de/Katalog/loginpage.do?methodToCall=showLogin</string>
    <string name="search_hint_action_bar">Search Uni Münster</string>
    <string name="search_added_string_uni_muenster">&#160;Uni Münster</string>
    <string name="search_added_string_ulb_muenster">&#160;ULB Münster</string>
    <string name="welcome_info">To contact the Münster School of Business and Economics, please use the following form:</string>
    <string name="edit_first_name"><b>First name</b></string>
    <string name="edit_last_name"><b>Last name</b></string>
    <string name="edit_email"><b>Email address</b></string>
    <string name="edit_email_incorrect">Incorrect email address, please retry</string>
    <string name="edit_email_incorrect_title">Incorrect email input</string>
    <string name="edit_message"><b>Enter your message</b></string>
    <string name="edit_message_subject"><b>Enter your subject</b></string>
    <string name="contact_email_subject">WWU Mobile Feedback (Android)</string>
    <string name="result_first_name">First name:&#160;</string>
    <string name="result_last_name">Last name:&#160;</string>
    <string name="result_email">Email address:&#160;</string>
    <string name="result_subject">Subject:&#160;</string>
    <string name="result_message">Entered message:&#160;</string>
    <string name="button_setDefaultText">Demo Button</string>
    <string name="button_send">Next</string>
    <string name="button_sendAsEmail">Send email</string>
    <string name="email_chooser">Send email ...</string>
    <string name="button_backToSendMessage">Edit</string>
    <string name="ContactFragmentActivity">Enter your message</string>
    <string name="ContactResultFragmentActivity">Your message</string>
    <string name="Utilities">Utilities</string>
    <string name="default_first_name">Max</string>
    <string name="default_last_name">Mustermann</string>
    <string name="default_email">max.mustermann@gmail.de</string>
    <string name="default_subject">Karate</string>
    <string name="default_message">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="browser_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Change Language</string>
    <string name="action_help">Help</string>
    <string name="action_browser">WWU Homepage</string>
    <string name="action_map">Juridicum map</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Next</string>
    <string name="action_wwu_locations_list">WWU Locations map</string>
    <string name="welcome_fragment"><b>Welcome to the Münster School of Business and Economics</b>\n \n To navigate through this app, swipe in the main menu from the left or tap on the home icon.</string>
    <string name="error_oncreate_ContactResultFragmentActivity">onCreate error</string>
    <string name="browser_default_address">https://www.wiwi.uni-muenster.de/fakultaet/en/startseite</string>
    <string name="title_activity_maps">Campus Map</string>
    <string name="google_maps_key">AIzaSyARPszAJzvs5dxxFrEfMsPu1Zb0vVD45KE</string>
    <string name="campus_show_map">Show on map</string>
    <string name="campus_address">Universitätsstraße 14, 48143 Münster</string>
    <string name="map_help_title">WWU Map</string>
    <string name="map_list_help_title">WWU Building List</string>
    <string name="map_help_text">Use the list icon in the action bar to search WWU buildings by their alphabetical order.</string>
    <string name="map_list_help_text">Select between the available list items to navigate to a WWU destination of your interest. </string>
    <string name="map_title_muenster_school_business_economics">Münster School of Business and Economics</string>
    <string name="map_address_juridicum">Universitätsstraße 14, 48143 Münster</string>
    <string name="title_activity_map_location_details">Location Details</string>
    <string name="title_library">ULB Münster</string>
    <string name="title_activity_web_view_catalog_search">Catalog Search</string>
    <string name="title_activity_web_view_library_login">My Account</string>
    <string name="title_about">About</string>
    <string name="title_activity_contact">Your Feedback</string>
    <string name="title_activity_about_wwu">About WWU</string>
    <string name="title_activity_main_menu_search">Main Menu Search</string>
    <string name="title_athletics">Athletics</string>
    <string name="title_athletics_activity_contact">Message Input</string>
    <string name="title_athletics_activity_contact_result">Your Message</string>
    <string name="map_location_details_view_title">Location:&#160;</string>
    <string name="map_location_details_view_address">Address:&#160;</string>
    <string name="map_location_details_view_description">More information:&#160;</string>
    <string name="map_view_marker_hint">For details tap on marker</string>
    <string name="error_oncreate_map_location_details_activity">onCreate error</string>
    <string name="title_activity_expandable_list">WWU Locations</string>
    <string-array name="athletics_list_items_array">
        <item>Sports Offer A-Z</item>
        <item>Athletics Web Site</item>
        <item>Contact</item>
    </string-array>
    <string name="athletics_item_1">Sports Offer A-Z</string>
    <string name="athletics_item_2">Athletics Web Site</string>
    <string name="athletics_contact_welcome_info">To contact the WWU Athletics personnel, please use the following form:</string>
    <string-array name="library_list_items_array">
        <item>Opening Hours</item>
        <item>Catalog Search</item>
        <item>My Account</item>
        <item>Ask a Librarian</item>
        <item>ULB Web Site</item>
    </string-array>
    <string name="library_opening_hours">Opening Hours</string>
    <string name="library_contact">Ask a Librarian</string>
    <string name="library_web_site">ULB Web Site"</string>
    <string-array name="about_list_items_array">
        <item>About this App</item>
        <item>About the University of Münster</item>
        <item>Feedback on the App</item>
    </string-array>
    <string name="title_activity_about_app">About this App</string>
    <string name="about_app_content">This app was developed by a pretty awesome guy!</string>
    <string name="about_wwu_content">The University of Münster (German: Westfälische Wilhelms-Universität Münster, WWU) is a public university located in the city of Münster, North Rhine-Westphalia in Germany. The WWU is part of the Deutsche Forschungsgemeinschaft, a society of Germany\'s leading research universities. The WWU has also been successful in the German government\'s Excellence Initiative. \n With almost 40,000 students and over 130 fields of study in 15 departments, it is Germany\'s third largest university and one of the foremost centers of German intellectual life. The university offers a wide range of subjects across the sciences, social sciences and the humanities. Several courses are also taught in English, including PhD programmes as well as postgraduate courses in geoinformatics, geospational technologies or information systems. \n Professors and former students have won nine Leibniz Prizes, the most prestigious as well as the best-funded prize in Europe, and one Fields Medal.</string>
    <string-array name="group_list_items_array">
        <item>Lecture Rooms</item>
        <item>Seminar Rooms</item>
        <item>Deanship</item>
        <item>Examination Offices</item>
        <item>Students Department</item>
        <item>Student Union</item>
    </string-array>
</resources>